<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.tabulify</groupId>
  <artifactId>tabulify</artifactId>
  <name>Tabulify</name>
  <packaging>pom</packaging>

  <parent>
    <groupId>com.eraldy</groupId>
    <artifactId>eraldy-core-aggregator</artifactId>
    <version>0.1.0-SNAPSHOT</version>
  </parent>


  <modules>
    <module>tabulify-core</module>
    <module>tabulify-cli</module>
    <module>tabulify-flow</module>
    <module>tabulify-json</module>
  </modules>

  <!-- The rest of dependencies management is in core  -->
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-flow</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-json</artifactId>
        <version>${project.version}</version>
      </dependency>
      <!-- Graph to create the dag-->
      <dependency>
        <groupId>org.jgrapht</groupId>
        <artifactId>jgrapht-core</artifactId>
        <version>1.4.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>1.11</source>
            <target>1.11</target>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
